0029304: Draw Harness, DBRep_DrawableShape - fix inappropriate use of unordered map

TColStd_DataMapOfIntegerInteger has been replaced by NCollection_Vector.